--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,10 @@ web_modules/
 .env.production.local
 .env.local
 
+#package
+package-lock.json
+package.json
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
