--- a/ui/package.json
+++ b/ui/package.json
@@ -60,6 +60,7 @@
     "react-i18next": "15.4.0",
     "sharp": "0.33.5",
     "slack-notify": "2.0.7",
+    "socket.io-client": "^4.8.1",
     "stripe": "17.6.0",
     "svix": "1.45.1",
     "swr": "2.3.0",
