--- a/ui/package.json
+++ b/ui/package.json
@@ -39,6 +39,7 @@
     "@retracedhq/retraced": "0.7.18",
     "@sentry/nextjs": "8.51.0",
     "@tailwindcss/typography": "0.5.16",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "2.4.3",
     "classnames": "2.5.1",
     "cookies-next": "5.1.0",
@@ -72,10 +73,10 @@
     "@playwright/test": "1.50.0",
     "@testing-library/jest-dom": "6.6.3",
     "@types/bcryptjs": "2.4.6",
-    "@types/jest": "29.5.14",
+    "@types/jest": "^29.5.14",
     "@types/micromatch": "4.0.9",
     "@types/mixpanel-browser": "2.51.0",
-    "@types/node": "22.12.0",
+    "@types/node": "^22.12.0",
     "@types/nodemailer": "6.4.17",
     "@types/react": "18.3.13",
     "@typescript-eslint/eslint-plugin": "8.22.0",
