--- a/ui/package.json
+++ b/ui/package.json
@@ -76,7 +76,7 @@
     "@types/jest": "^29.5.14",
     "@types/micromatch": "4.0.9",
     "@types/mixpanel-browser": "2.51.0",
-    "@types/node": "^22.12.0",
+    "@types/node": "^22.13.5",
     "@types/nodemailer": "6.4.17",
     "@types/react": "18.3.13",
     "@typescript-eslint/eslint-plugin": "8.22.0",
@@ -96,7 +96,7 @@
     "release-it": "18.1.2",
     "tailwindcss": "3.4.17",
     "ts-node": "10.9.2",
-    "typescript": "5.7.3"
+    "typescript": "^5.7.3"
   },
   "overrides": {
     "typeorm": {
