--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -22,6 +22,6 @@
       "@/components/*": ["components/*"],
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.d.ts", "../../stage/next-auth.d copy.ts", "../../stage/next-auth.dd.ts", "../../stage/repos.ts"],
   "exclude": ["node_modules"],
 }
