--- a/ui/package.json
+++ b/ui/package.json
@@ -61,6 +61,7 @@
     "react-i18next": "15.4.0",
     "sharp": "0.33.5",
     "slack-notify": "2.0.7",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stripe": "17.6.0",
     "svix": "1.45.1",
@@ -79,6 +80,7 @@
     "@types/node": "^22.13.5",
     "@types/nodemailer": "6.4.17",
     "@types/react": "18.3.13",
+    "@types/socket.io": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "8.22.0",
     "@typescript-eslint/parser": "8.22.0",
     "autoprefixer": "10.4.20",
