--- a/ui/app.json
+++ b/ui/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "BoxyHQ OpsConverge",
+  "name": "OpsConverge",
   "description": "The Open Source Next.js OpsConverge. Next.js based SaaS starter kit that saves you months of development by starting you off with all the features that are the same in every product, so you can focus on what makes your app unique.",
   "repository": "https://github.com/boxyhq/saas-starter-kit",
   "logo": "https://boxyhq.com/img/logo.png",
